--- a/src/index.css
+++ b/src/index.css
@@ -55,3 +55,9 @@ h2 {
   box-shadow: var(--sombra-box);
   border-radius: var(--borda-arredondada);
 }
+
+.limitador {
+  width: 90%;
+  max-width: 1000px;
+  margin: auto;
+}
