--- a/src/components/Menu/Menu.module.css
+++ b/src/components/Menu/Menu.module.css
@@ -28,7 +28,7 @@ nav a:focus {
 }
 
 nav a.ativo {
-  background-color: #0c0c0d;
+  background-color: #2d2d2e;
 }
 
 @media screen and (min-width: 700px) {
