--- a/src/index.css
+++ b/src/index.css
@@ -62,6 +62,8 @@ h2 {
   margin: auto;
 }
 
+/*
+agora esse css esta separado em um componente, que é o (Caixa)
 #sobre,
 #produtos,
 #contato,
@@ -71,4 +73,4 @@ h2 {
   box-shadow: var(--sombra-box);
   border-radius: var(--borda-arredondada);
   padding: 1rem;
-}
+} */
